src/components/Word/Word.css
.short {
    display: inline;
}

.word {
    cursor: pointer;
}

.word-phonemics {
    margin-top: 10px;
}

.word-name {
    font-weight: bold;
}

audio {
    height: 20px;
    width: 113px;
}

.normal {
    border: 1px solid lightgrey;
    display: flex;
    border-radius: 3px;
    height: 72px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.spell {
    padding: 10px;
    border: 1px solid lightgrey;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 16px;
    border-radius: 3px;
}

